@@ -174,7 +174,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Fix formatting of titles on Special:Undelete
 * (bug 7026) Fix action=raw&templates=expand
 * (bug 6976) Add namespace and direction classes to classic skins
-
+* (bug 7144) Don't "return to main" from OutputPage::loginToUse() if the the user can't
+  read the main page in the first place
 
 == Languages updated ==
 
